--- a/Garrett/Week8/random_quote/css/quote.css
+++ b/Garrett/Week8/random_quote/css/quote.css
@@ -4,6 +4,7 @@ h1 {
 }
 
 body {
+    background-image: url("images/hawnuhlee_inspiring.jpg");
     background-color:#00394C;
     font-family: sans-serif;
 }
