finished basic css styling, functionality online

--- a/Juan/Exercises/Week8/random_quote/css/main.css
+++ b/Juan/Exercises/Week8/random_quote/css/main.css
@@ -29,10 +29,15 @@ header {
   /* Quote Area */
 .quote_box {
   width: 60vh;
-  min-height: 20vh;
+  min-height: 3rem;
   background-color: white;
   margin: 1rem auto;
+  border: 2px dotted #bef3fd;
   border-radius: 1rem;
+  text-align: center;
+}
+.quote_box p {
+  padding: 1rem;
 }
 
   /* Quote Button */
@@ -42,8 +47,12 @@ button {
   width: 8rem;
   height: 3rem;
   border-radius: 0.5rem;
+  border: 2px dashed #409EE8;
+  background-color: #bef3fd;
 }
-
+button:focus {
+  outline: none;
+}
 /* Footer */
 footer {
   margin-top: 10vh;
