--- a/Carolyn/Week8/random_quote/random_quote.css
+++ b/Carolyn/Week8/random_quote/random_quote.css
@@ -11,6 +11,12 @@ h2{
   padding-top: 45px;
   padding-bottom: 45px;
 }
+#demo{
+  font-family: Chalkduster, sans-serif;
+  text-align: center;
+  font-size: 2.5em;
+
+}
 #newQuote{
   margin-bottom: 10px;
   padding: 7px;
