--- a/Charles/week8/randomquote/random.css
+++ b/Charles/week8/randomquote/random.css
@@ -1,3 +1,20 @@
 .bround {
-background-color: A1DCF0;
+  border-radius: 1em;
+  background: url('6961094951_a35c7031a2_n.jpg') no-repeat 0 0 scroll;
+  background-size: 100% 100%;
+  height:50em;
+  width:50em;
+}
+.text {
+  margin-left: 2em;
+}
+
+.body {
+  max-width: 50%;
+  background-color:#blue;
+}
+
+#credit {
+  position: absolute;
+    bottom: 1px;
 }
