--- a/Charles/week8/randomquote/random.css
+++ b/Charles/week8/randomquote/random.css
@@ -1,3 +1,12 @@
+hr.style-five
+ { border: 0; height: 0;
+   box-shadow: 0 0 10px 1px black;
+ }
+/*hr.style-five:after {
+content: "\00a0";
+}*/
+
+
 .bround {
   position: relative;
   border-radius: 1em;
@@ -6,8 +15,14 @@
   height:50em;
   width:50em;
 }
+
 .text {
   margin-left: 2em;
+  color: #C1E4E8;
+}
+
+h1 {
+  margin-left: 1em;
   color: #C1E4E8;
 }
 
