--- a/Sheri/random_quote/random.css
+++ b/Sheri/random_quote/random.css
@@ -1,4 +1,7 @@
+/*.wrapper {
+  position:relative;*/
 
+/*}*/
 .the_thing {
   width: 60%;
   margin-left:auto;
@@ -30,4 +33,20 @@
 #new {
   background-color: #409EE8;
   border-radius: 20px;
+}
+
+footer{
+  display:block;
+  position: absolute;
+  bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'Open Sans', sans-serif;
+  font-size: .5em;
+  color:black;
+  width: 60%;
+  text-align: center;
+  background-color: #DBF8FE;
+  border-radius: 10px;
+  padding:0px 0% 0% 0%;
 }
