--- a/Sheri/random_quote/random.css
+++ b/Sheri/random_quote/random.css
@@ -7,7 +7,8 @@
   margin-left:auto;
   margin-right:auto;
   text-align: center;
-  background-color: #DBF8FE;
+  background-color: red;
+  /* #DBF8FE;*/
   border-radius: 10px;
   padding:0px 3% 1% 3%;
 
